--- a/src/mpg123/libmpg123/README
+++ b/src/mpg123/libmpg123/README
@@ -21,8 +21,11 @@ John Lindgren, July 16, 2010:
  * Updated to libmpg123 1.12.3.
  * Imported upstream revision 2760 (fixes an unused variable warning).
 
-John Lindgren, February 6, 2010:
+John Lindgren, February 6, 2011:
  * Updated to libmpg123 1.13.1.
+
+John Lindgren, February 16, 2011:
+ * Imported upstream revision 2843 (fixes an unused variable warning).
 
  ======
 
