--- a/po/es.po
+++ b/po/es.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious\n"
 "Report-Msgid-Bugs-To: http://jira.atheme.org/\n"
-"POT-Creation-Date: 2011-03-02 22:59-0500\n"
+"POT-Creation-Date: 2011-03-02 23:37-0500\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Jorge Andrés <winninglero@gmail.com>\n"
 "Language-Team: \n"
@@ -5076,7 +5076,7 @@ msgid ""
 "%p: Currently playing (1 or 0)\n"
 "%a: Artist\n"
 "%b: Album\n"
-"%r: Track title"
+"%T: Track title"
 msgstr ""
 
 #: src/song_change/song_change.c:506
