--- a/po/eu.po
+++ b/po/eu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: audacious-plugins_eu\n"
 "Report-Msgid-Bugs-To: http://jira.atheme.org/\n"
-"POT-Creation-Date: 2011-03-02 22:58-0500\n"
+"POT-Creation-Date: 2011-03-02 23:37-0500\n"
 "PO-Revision-Date: 2009-04-23 18:56+0200\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
 "Language-Team: Basque <itzulpena@euskalgnu.org>\n"
@@ -5379,7 +5379,7 @@ msgid ""
 "%p: Currently playing (1 or 0)\n"
 "%a: Artist\n"
 "%b: Album\n"
-"%r: Track title"
+"%T: Track title"
 msgstr ""
 "Honako formatu-kateak erabil ditzakezu\n"
 "komandoari deitu aurretik ordeztuko direnak\n"
