--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious-plugins 2.4\n"
 "Report-Msgid-Bugs-To: http://jira.atheme.org/\n"
-"POT-Creation-Date: 2011-03-02 22:58-0500\n"
+"POT-Creation-Date: 2011-03-02 23:37-0500\n"
 "PO-Revision-Date: 2010-08-18 13:51+0100\n"
 "Last-Translator: StrassBoy <StrassBoy@gmail.com>\n"
 "Language-Team: \n"
@@ -5505,7 +5505,7 @@ msgid ""
 "%p: Currently playing (1 or 0)\n"
 "%a: Artist\n"
 "%b: Album\n"
-"%r: Track title"
+"%T: Track title"
 msgstr ""
 "Vous pouvez utiliser les chaînes de la liste ci-dessous.\n"
 "\n"
