--- a/po/ro.po
+++ b/po/ro.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: audacious-plugins 1.4.0\n"
 "Report-Msgid-Bugs-To: http://jira.atheme.org/\n"
-"POT-Creation-Date: 2011-03-02 22:58-0500\n"
+"POT-Creation-Date: 2011-03-02 23:37-0500\n"
 "PO-Revision-Date: 2007-08-28 20:44+0200\n"
 "Last-Translator: Daniel Patriche <m4st3rth0r@gmail.com>\n"
 "Language-Team: Romanian <audacious@atheme.org>\n"
@@ -5281,7 +5281,7 @@ msgid ""
 "%p: Currently playing (1 or 0)\n"
 "%a: Artist\n"
 "%b: Album\n"
-"%r: Track title"
+"%T: Track title"
 msgstr ""
 
 #: src/song_change/song_change.c:506
