--- a/po/audacious-plugins.pot
+++ b/po/audacious-plugins.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://jira.atheme.org/\n"
-"POT-Creation-Date: 2011-03-02 22:59-0500\n"
+"POT-Creation-Date: 2011-03-02 23:37-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4750,7 +4750,7 @@ msgid ""
 "%p: Currently playing (1 or 0)\n"
 "%a: Artist\n"
 "%b: Album\n"
-"%r: Track title"
+"%T: Track title"
 msgstr ""
 
 #: src/song_change/song_change.c:506
